--- a/src/main/resources/templates/manager/leaves.html
+++ b/src/main/resources/templates/manager/leaves.html
@@ -37,7 +37,7 @@
             </tr>
         </table>
         
-        <a th:href="${'/staff/leave/export/'}">Print CSV</a>
+        <a th:href="${'/manager/leave/export/'}">Print CSV</a>
       
     </div>
 </div>
