--- a/src/main/resources/templates/manager/leaves.html
+++ b/src/main/resources/templates/manager/leaves.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<div class="container">
+	<div class="container mt-5">
 		<div class="row">
 			<div class="col-md-3">
 				<p class="lead">Manager Menu</p>
