--- a/src/main/resources/templates/manager/viewsubleaveapplications.html
+++ b/src/main/resources/templates/manager/viewsubleaveapplications.html
@@ -28,8 +28,11 @@
 							<span th:text="${managername}"></span> Subordinates Leave
 						</h3>
 						<hr>
+						<h4>Employee Leave Details</h4>
+						<br>
+						<br>
 						<div th:each="subordinate : ${subordinates}">
-
+							<h6 th:text="${subordinate.name} + '\'s leave details'" ></h6>
 							<table class="table table-striped">
 								<tr>
 									<th>Staff ID</th>
@@ -46,13 +49,12 @@
 									<td th:text="${subordinate.role.medicalleave}"></td>
 								</tr>
 							</table>
-							<br>
-							<div th:if="${#lists.isEmpty(subleave)}">
+							
+							<table th:if="${#lists.isEmpty(subleave)}">
 								<h5>No records</h5>
-							</div>
-							<div th:if="${not #lists.isEmpty(subleave)}">
-								<h4>Employee Leave Details</h4>
-								<table class="table table-striped">
+							</table>
+							
+								<table class="table table-striped" th:if="${not #lists.isEmpty(subleave)}">
 									<tr>
 										<th>Leave ID</th>
 										<th>Start Date</th>
@@ -62,7 +64,6 @@
 										<th>Details</th>
 										<!--	<td th:text="${itrStat.index}">test</td> -->
 									</tr>
-
 									<tr th:each="Leavedetail : ${subleave}"
 										th:if="${subordinate.id} == ${Leavedetail.employee.id}">
 										<td th:text="${Leavedetail.id}"><input type="text"
@@ -79,7 +80,9 @@
 												Click here</a></td>
 									</tr>
 								</table>
-							</div>
+							<br>
+							<br>
+							<br>
 						</div>
 					</div>
 
