--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,7 +39,7 @@
 
 			<fieldset class="form-group col-md-4">
 				<label for="password">Password :</label> <input class="form-control"
-					type="text" id="password" th:field=*{password}>
+					type="password" id="password" th:field=*{password}>
 			</fieldset>
 
 			<button class="btn btn-primary">Login</button>
