modify employee form to reject if userid exist

--- a/src/main/resources/templates/admin/addemployee.html
+++ b/src/main/resources/templates/admin/addemployee.html
@@ -68,7 +68,7 @@
 							<div class="col">
 								<fieldset class="form-group col">
 									<label for="userid">User Id</label> <input class="form-control"
-										type="text" id="userid" th:field=*{userid}>
+										type="text" id="userid" th:field="*{userid}">
 								</fieldset>
 								<p style="color: red" th:if="${#fields.hasErrors('userid')}"
 									th:errors="*{userid}">Name Error</p>
