--- a/src/main/resources/templates/admin/addemployee.html
+++ b/src/main/resources/templates/admin/addemployee.html
@@ -20,6 +20,8 @@
 					<li class="list-group-item active">Add new employee</li>
 					<li class="list-group-item"><a href="/admin/role/list">View
 							Role</a></li>
+							<li class="list-group-item"><a href="/admin/employee/logout">logout</a></li>
+							
 				</ul>
 			</div>
 		</div>
