--- a/src/main/resources/templates/admin/editemployee.html
+++ b/src/main/resources/templates/admin/editemployee.html
@@ -20,6 +20,8 @@
 								Role</a></li>
 								<li class="list-group-item active">Editing Employee <span th:text="${employee.name}"></span>
 							</li>
+							<li class="list-group-item"><a href="/admin/employee/logout">logout</a></li>
+							
 					</ul>
 				</div>
 			</div>
