--- a/src/main/resources/templates/admin/editemployee.html
+++ b/src/main/resources/templates/admin/editemployee.html
@@ -30,7 +30,7 @@
 							<h5 th:text="${employee.name}">Edit Employee</h5>
 							<hr>
 								<form class="form-horizontal" th:object="${employee}"
-									th:action=${employee.id} method="POST">
+									th:action=${employee.id} method="post">
 									
 									<div class="form-group">
 										<div class="col-sm-10">
