--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,25 +2,26 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" >
-         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-     <link href="https://cdn.bootcss.com/font-awesome/5.8.2/css/all.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<link
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	rel="stylesheet">
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="https://cdn.bootcss.com/font-awesome/5.8.2/css/all.css"
+	rel="stylesheet">
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <title>Laps : Employee Login</title>
 </head>
 <body>
 
 
-<div th:if="${message}" th:text="${message}"
-	th:class="${'alert ' + alertClass}" id="successMessage"
-	style="text-align: center" /></div>
 	<div th:if="${message}" th:text="${message}"
-	th:class="${'alert ' + alertClass}" id="successMessage"
-	style="text-align: center" /></div>
-	
+		th:class="${'alert ' + alertClass}" id="successMessage"
+		style="text-align: center" /></div>
 	<div class="container mt-5">
-	
-<div class="alert-danger" th:if="${error}" th:text="${error}"></div>
+
+		<div class="alert-danger" th:if="${error}" th:text="${error}"></div>
 
 
 		<h1>Login</h1>
@@ -45,14 +46,14 @@
 			<button class="btn btn-primary">Login</button>
 		</form>
 	</div>
-	
+
 	<script>
- $(document).ready(function(){
-      setTimeout(function() {
-         $('#successMessage').fadeOut('slow');
-         }, 2000); // <-- time in milliseconds
- });
- </script>
- 
+		$(document).ready(function() {
+			setTimeout(function() {
+				$('#successMessage').fadeOut('slow');
+			}, 2000); // <-- time in milliseconds
+		});
+	</script>
+
 </body>
 </html>
