--- a/src/main/resources/templates/staff/createleave.html
+++ b/src/main/resources/templates/staff/createleave.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-<title>All Employee</title>
+<title>Staff Details</title>
 <th:block th:include="layout/header"></th:block>
 </head>
 <body>
 <div class="container mt-5">
 	<div class="row">
 		<div class="col-md-3">
-			<p class="lead">Admin Menu</p>
+			<p class="lead">Staff Menu</p>
 			<div class="list-group">
 				<ul>
 					<li class="list-group-item active">Create Leave</li>
 					<li class="list-group-item"><a href="/staff/history">View
 							History</a></li>
+							<li class="list-group-item"><a href="/admin/employee/logout">logout</a></li>
 
 				</ul>
 			</div>
@@ -53,8 +54,8 @@
 				<label for="reason">Reason</label> <input class="form-control"
 					type="text" th:field=*{reason}>
 			</div>
-			<input type="hidden" th:field=*{employee} th:value="${employee}">
-			<button>Submit</button>
+			<input type="hidden"  th:field=*{employee} th:value="${employee}">
+			<button class="btn btn-primary form-control">Submit</button>
 		</form>
 		</div>
 	
