--- a/src/main/resources/templates/staff/history.html
+++ b/src/main/resources/templates/staff/history.html
@@ -12,7 +12,7 @@
 <div class="container mt-5">
 	<div class="row">
 		<div class="col-md-3">
-			<p class="lead">Admin Menu</p>
+			<p class="lead">Staff Menu</p>
 			<div class="list-group">
 				<ul>
 					<li class="list-group-item"><a th:href="@{/staff/create}">Create
