included members page

--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -16,10 +16,13 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
+<div class="navbar-nav">
+    <a class="nav-item nav-link" href="/members">Members</a>
+  </div>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+  
 
+    <ul class="navbar-nav mr-auto">
       </ul>
       <div class="navbar-nav navbar-right">
         <a class="nav-item nav-link" href="/staff/create">Apply Leave</a>   
