--- a/src/main/resources/templates/manager/findleave.html
+++ b/src/main/resources/templates/manager/findleave.html
@@ -12,7 +12,9 @@
 			<div class="list-group">
 				<ul>
 			
-					<li class="list-group-item"><a th:href="@{'/manager/viewsubleave?managerId='+${id}}">Subordinates Info</a></li>
+					<li class="list-group-item"><a th:href="@{'/manager/viewsubleave?managerId='+${id}}">Subordinates
+								Leave Applications</a></li>
+					<li class="list-group-item"><a href="/manager/subView">View Subordinate Leave History</a></li>
 					<li class="list-group-item active"><a href="/manager/findleave">Search
 							leave by date</a></li>
 					<li class="list-group-item"><a href="/admin/employee/logout">logout</a></li>
