--- a/src/main/resources/templates/manager/leaves.html
+++ b/src/main/resources/templates/manager/leaves.html
@@ -13,10 +13,11 @@
 				<p class="lead">Manager Menu</p>
 				<div class="list-group">
 					<ul>
-						<li class="list-group-item "><a
+						<li class="list-group-item"><a
 							th:href="@{'/manager/viewsubleave?managerId='+${id}}">Subordinates
-								Info</a></li>
-						<li class="list-group-item"><a href="/manager/findleave">Search
+								Leave Applications</a></li>
+						<li class="list-group-item"><a href="/manager/subView">View Subordinate Leave History</a></li>
+						<li class="list-group-item active"><a href="/manager/findleave">Search
 								leave by date</a></li>
 						<li class="list-group-item"><a href="/admin/employee/logout">logout</a></li>
 						<li class="list-group-item active">Leave Applications</li>
