--- a/src/main/resources/templates/manager/viewsubleaveapplications.html
+++ b/src/main/resources/templates/manager/viewsubleaveapplications.html
@@ -11,7 +11,9 @@
 				<p class="lead">Manager Menu</p>
 				<div class="list-group">
 					<ul>
-						<li class="list-group-item active">Subordinates Info</li>
+						<li class="list-group-item active"><a th:href="@{'/manager/viewsubleave?managerId='+${id}}">Subordinates
+								Leave Applications</a></li>
+						<li class="list-group-item"><a href="/manager/subView">View Subordinate Leave History</a></li>
 						<li class="list-group-item"><a href="/manager/findleave">Search
 								leave by date</a></li>
 						<li class="list-group-item"><a href="/admin/employee/logout">logout</a></li>
@@ -25,7 +27,7 @@
 					</div>
 					<div th:if="${not #lists.isEmpty(subordinates)}">
 						<h3>
-							<span th:text="${managername}"></span> Subordinates Leave
+							<span th:text="${managername}"></span> Subordinates' Leave Applications
 						</h3>
 						<hr>
 						<h4>Employee Leave Details</h4>
